cleanup: callback프론트 이전됨으로 authController코드 삭제 #27
